log
Thu 25 Apr 2024 03:10:32 PM UTC: 
 tests:  0|6
total_score: 0/70
872365e
Thu 25 Apr 2024 03:14:07 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|6
total_score: 0/70
af45785
Thu 25 Apr 2024 03:14:48 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
a750b5a
Thu 25 Apr 2024 03:16:24 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
dcc9fc5
Thu 25 Apr 2024 03:22:10 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
ddd5934
Thu 25 Apr 2024 03:24:38 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
ed05b25
Thu 25 Apr 2024 03:26:37 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:104:5: error: expected ‘;’ before ‘return’
  104 |     return NULL;
      |     ^~~~~~
hashmap.c:105:1: error: control reaches end of non-void function [-Werror=return-type]
  105 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9c1a067
Thu 25 Apr 2024 03:26:44 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
655434c
Thu 25 Apr 2024 03:27:22 PM UTC: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
5605aef
